--- a/employee-service.properties
+++ b/employee-service.properties
@@ -9,3 +9,5 @@ spring.jpa.hibernate.ddl-auto=update
 #configuring a different port as department-service microservices already uses 8080
 server.port=8081
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+
+spring.boot.message=Hi, Employee Service
