--- a/employee-service.properties
+++ b/employee-service.properties
@@ -10,4 +10,4 @@ spring.jpa.hibernate.ddl-auto=update
 server.port=8081
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
-spring.boot.message=Updated One
+spring.boot.message=Updated ONe
